isucon/k8s/manifests/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: isucon-nginx
  namespace: isucon
spec:
  selector:
    app: isucon-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
