isucon/k8s/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: isucon-ingress
  namespace: isucon
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: "cloudflare-tunnel"
  rules:
    - host: isucon.aooba.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: isucon-nginx
                port:
                  number: 80
